fix(security): change SameSite attribute for cookies from Strict to Lax